--- a/notebooks/mnist.ipynb
+++ b/notebooks/mnist.ipynb
@@ -11,9 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os, pickle, random\n",
     "from datetime import datetime\n",
@@ -51,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifier = Dorefanet()\n",
     "net = classifier.load_network(json_layer=\"/home/xilinx/jupyter_notebooks/QNN/qnn/params/mnist.json\")\n",
     "\n",
-    "json_network_custom = '/home/xilinx/jupyter_notebooks/QNN/qnn/bitstreams/bitmnist.json'\n",
-    "json_layer_custom = \"/home/xilinx/jupyter_notebooks/QNN/qnn/bitstreams/mnist.json\"\n",
-    "bit_file_custom = \"/home/xilinx/jupyter_notebooks/QNN/qnn/bitstreams/mn.bit\"\n",
+    "json_network_custom = \"/home/xilinx/jupyter_notebooks/QNN/qnn/bitstreams/bitmnist.json\"\n",
+    "json_layer_custom =   \"/home/xilinx/jupyter_notebooks/QNN/qnn/params/mnist.json\"\n",
+    "bit_file_custom =     \"/home/xilinx/jupyter_notebooks/QNN/qnn/bitstreams/mnist.bit\"\n",
     "\n",
     "classifier.init_accelerator(bit_file=bit_file_custom, json_network=json_network_custom, json_layer=json_layer_custom)"
    ]
@@ -74,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +105,7 @@
     "activation_bits = 2\n",
     "th = 2**activation_bits-1\n",
     "conv0_T = range(th) \n",
-    "conv0_T = np.asarray(rr,dtype=np.float32) \n",
+    "conv0_T = np.asarray(conv0_T,dtype=np.float32) \n",
     "conv0_T += 0.5\n",
     "conv0_T /= th;\n",
     " \n",
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,8 +145,8 @@
       "#9  000007-num9.png    Class 9  , Predicted 9,    Accuracy 100.00\n",
       "#10  000004-num4.png    Class 4  , Predicted 4,    Accuracy 100.00\n",
       "Correct: 10 / 10\n",
-      "Average Time: 42.7868 ms\n",
-      "Fps: 23.37169407387325 \n",
+      "Average Time: 42.3693 ms\n",
+      "Fps: 23.601994840603925 \n",
       "\n",
       "\n"
      ]
@@ -189,7 +207,7 @@
     "    if predict == int(curr_class):\n",
     "        correct += 1    \n",
     "                        \n",
-    "    print('#{4}  {2}    Class {0}  , Predicted {1},    Accuracy {3:.2f}'.format(curr_class,classes[predict],name,correct/idx*100,idx))\n",
+    "    print('#{4}  {2}    Class {0}  , Predicted {1},    Accuracy {3:.2f}'.format(curr_class,str(predict),name,correct/idx*100,idx))\n",
     "\n",
     "    if idx == 10:\n",
     "        avg_time = total_time / idx * 1000000\n",
@@ -201,6 +219,13 @@
     "       \n",
     "exiter()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
