--- a/notebooks/mnist.ipynb
+++ b/notebooks/mnist.ipynb
@@ -50,6 +50,7 @@
     "import scipy.io\n",
     "import json\n",
     "\n",
+    "# source: http://cs231n.stanford.edu/assignments.html\n",
     "from cs231n.fast_layers import conv_forward_fast, max_pool_forward_fast \n",
     "\n",
     "def exiter():\n",
